--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #cf9aff, #95c0ff);
+    /* background: linear-gradient(135deg, #cf9aff, #95c0ff); */
+    /* background-image: linear-gradient(to right, #ff9966, #ff5e62); */
+    /* background-image: linear-gradient(to right, #434343 0%, black 100%); */
+    background: #262a2f;
+    
     color: #fff;
     padding-top: 4%;
     padding-left: 10%;
@@ -24,7 +28,11 @@
 .container button {
     display: flex;
     align-items: center;
-    background: linear-gradient(#9418fd, #571094);
+    background-image: linear-gradient(to right, #ff9966, #ff5e62);
+    /* background: linear-gradient(#9418fd, #571094); */
+    /* background-image: linear-gradient(to right, #ff512f, #f09819);
+    background-image: linear-gradient(to right, #5a3f37, #2c7744);
+    background-image: radial-gradient( circle farthest-corner at 22.4% 21.7%, rgba(4,189,228,1) 0%, rgba(2,83,185,1) 100.2% ); */
     color: #fff;
     font-size: 16px;
     outline: 0;
