--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
     display: flex;
     align-items: center;
     background-image: linear-gradient(to right, #ff9966, #ff5e62);
+    background: #AA4E2A;
     color: #fff;
     font-size: 16px;
     outline: 0;
